; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_wavelan_cs.c_fee_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_wavelan_cs.c_fee_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mmw_fee_addr = common dso_local global i32 0, align 4
@MMW_FEE_ADDR_EN = common dso_local global i32 0, align 4
@mmw_fee_ctrl = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_WREN = common dso_local global i32 0, align 4
@mmw_fee_data_h = common dso_local global i32 0, align 4
@mmw_fee_data_l = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_WRITE = common dso_local global i32 0, align 4
@MMW_FEE_ADDR_DS = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_WDS = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_PRCLEAR = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_PREN = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_PRREAD = common dso_local global i32 0, align 4
@MMW_FEE_CTRL_PRWRITE = common dso_local global i32 0, align 4
@mmr_fee_data_h = common dso_local global i32 0, align 4
@mmr_fee_data_l = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32*, i32)* @fee_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fee_write(i32 %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %7, align 8
  %11 = sext i32 %9 to i64
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32* %12, i32** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @mmw_fee_addr, align 4
  %15 = call i32 @mmwoff(i32 0, i32 %14)
  %16 = load i32, i32* @MMW_FEE_ADDR_EN, align 4
  %17 = call i32 @mmc_out(i32 %13, i32 %15, i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @mmw_fee_ctrl, align 4
  %20 = call i32 @mmwoff(i32 0, i32 %19)
  %21 = load i32, i32* @MMW_FEE_CTRL_WREN, align 4
  %22 = call i32 @mmc_out(i32 %18, i32 %20, i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @fee_wait(i32 %23, i32 10, i32 100)
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @mmw_fee_addr, align 4
  %27 = call i32 @mmwoff(i32 0, i32 %26)
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %8, align 4
  %30 = add nsw i32 %28, %29
  %31 = sub nsw i32 %30, 1
  %32 = call i32 @mmc_out(i32 %25, i32 %27, i32 %31)
  br label %33

33:                                               ; preds = %37, %4
  %34 = load i32, i32* %8, align 4
  %35 = add nsw i32 %34, -1
  store i32 %35, i32* %8, align 4
  %36 = icmp sgt i32 %34, 0
  br i1 %36, label %37, label %61

37:                                               ; preds = %33
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* @mmw_fee_data_h, align 4
  %40 = call i32 @mmwoff(i32 0, i32 %39)
  %41 = load i32*, i32** %7, align 8
  %42 = getelementptr inbounds i32, i32* %41, i32 -1
  store i32* %42, i32** %7, align 8
  %43 = load i32, i32* %42, align 4
  %44 = ashr i32 %43, 8
  %45 = call i32 @mmc_out(i32 %38, i32 %40, i32 %44)
  %46 = load i32, i32* %5, align 4
  %47 = load i32, i32* @mmw_fee_data_l, align 4
  %48 = call i32 @mmwoff(i32 0, i32 %47)
  %49 = load i32*, i32** %7, align 8
  %50 = load i32, i32* %49, align 4
  %51 = and i32 %50, 255
  %52 = call i32 @mmc_out(i32 %46, i32 %48, i32 %51)
  %53 = load i32, i32* %5, align 4
  %54 = load i32, i32* @mmw_fee_ctrl, align 4
  %55 = call i32 @mmwoff(i32 0, i32 %54)
  %56 = load i32, i32* @MMW_FEE_CTRL_WRITE, align 4
  %57 = call i32 @mmc_out(i32 %53, i32 %55, i32 %56)
  %58 = call i32 @mdelay(i32 10)
  %59 = load i32, i32* %5, align 4
  %60 = call i32 @fee_wait(i32 %59, i32 10, i32 100)
  br label %33

61:                                               ; preds = %33
  %62 = load i32, i32* %5, align 4
  %63 = load i32, i32* @mmw_fee_addr, align 4
  %64 = call i32 @mmwoff(i32 0, i32 %63)
  %65 = load i32, i32* @MMW_FEE_ADDR_DS, align 4
  %66 = call i32 @mmc_out(i32 %62, i32 %64, i32 %65)
  %67 = load i32, i32* %5, align 4
  %68 = load i32, i32* @mmw_fee_ctrl, align 4
  %69 = call i32 @mmwoff(i32 0, i32 %68)
  %70 = load i32, i32* @MMW_FEE_CTRL_WDS, align 4
  %71 = call i32 @mmc_out(i32 %67, i32 %69, i32 %70)
  %72 = load i32, i32* %5, align 4
  %73 = call i32 @fee_wait(i32 %72, i32 10, i32 100)
  ret void
}

declare dso_local i32 @mmc_out(i32, i32, i32) #1

declare dso_local i32 @mmwoff(i32, i32) #1

declare dso_local i32 @fee_wait(i32, i32, i32) #1

declare dso_local i32 @mdelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
